allow filtering of missing values
